Bug 1247098 - Mark nsIPresShell::GetResolution and nsPresContext::IsRootContentDocument as const. r=tnikkel

MozReview-Commit-ID: 5IXm4EUy7IN